--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -63,10 +63,10 @@
             <!-- /.login-logo -->
             <div class="box login-box-body">
                 <form action="j_spring_security_check" method="post">
-                    <p class="login-box-msg">Informe Login e Senha para entrar (ADMIN - ADMIN)</p>
+                    <p class="login-box-msg">Informe Login e Senha para entrar (ADMIN - admin)</p>
 
                     <div class="form-group has-feedback">
-                        <p:inputText id="j_username" styleClass="form-control" placeholder="Login"/>
+                        <p:inputText id="j_username" styleClass="form-control"  placeholder="Login"/>
                         <i class="fa fa-user form-control-feedback"></i>
                     </div>
                     
